fix: disable background scroll when modal opened on mobile

--- a/static/style/inverted-style.css
+++ b/static/style/inverted-style.css
@@ -366,8 +366,7 @@
     }
 
     body.preview-active > background,
-    #issues-container.preview-active > div {
-      opacity: 0.5;
+    body.preview-active > #issues-container > div {
       filter: blur(8px);
     }
   }
